- Added foreachloops.java with brief explanation of for-each loops. - Added printf.java. - Added both classes to Main.java selector as [8] and [9] respectively. - methods in pu.java are now overloaded instead of having different method names. This is so that it is easier.